2010-09-24  Andrew John Hughes  <gnu.andrew@redhat.com>

	PR3485: Support additional targets for the bootstrap build
	* Makefile.am:
	(.PHONY): Add new clean targets.
	(add-tzdata-support-debug): Depend on icedtea-debug, not icedtea.
	(icedtea-boot): Move tz.properties handling to its own target.
	(add-systemtap-boot): Add SystemTap support to the boot build.
	(clean-add-systemtap-boot): Remove SystemTap support from the boot build.
	(add-pulseaudio-boot): New target to add PulseAudio support to the boot build.
	(clean-add-pulseaudio-boot): Remove PulseAudio support from the boot build.
	(add-nss-boot): New target to add NSS support to the boot build.
	(clean-add-nss-boot): Remove NSS support from the boot build.
	(add-tzdata-support-boot): New target to add alternate timezone data support to the boot build.
	(clean-add-tzdata-support-boot): Remove alternate timezone data support from the boot build.
	(icedtea-stage1): Add new add-x-boot targets.
	(clean-icedtea-stage1): Add new clean-add-x-boot targets.
	* NEWS: Updated.

2010-09-22  Andrew John Hughes  <gnu.andrew@redhat.com>

	PR3484: Move SystemTap support to its own target
	* Makefile.am:
	(.PHONY): Add clean-add-systemtap and
	clean-add-systemtap-debug.
	(clean-local): Likewise.
	(icedtea): Remove systemtap support.
	(icedtea-debug): Likewise.
	(icedtea-stage2): Depend on add-systemtap.
	(icedtea-debug-stage2): Depend on add-systemtap-debug.
	(add-systemtap): New target to add SystemTap support to the build.
	(add-systemtap-debug): Likewise for debug.
	(clean-add-systemtap): Remove SystemTap support from the build.
	(clean-add-systemtap-debug): Likewise for debug.
	* NEWS: Updated.

2010-09-23  Andrew John Hughes  <gnu.andrew@redhat.com>

	PR3483: Separate addition of nss.cfg and tz.properties into separate targets
	* Makefile.am:
	(.PHONY): Add clean-add-nss, clean-add-nss-debug,
	clean-add-tzdata-support and clean-add-tzdata-support-debug.
	(clean-local): Likewise.
	(icedtea): Remove NSS and tzdata support.